# 1.0.0-dev.3 6/23/14
6/23/14 #27 uniformly reduce size of terms and arrow in equations
6/23/14 #29 address space problems with 'balanced / not balanced' dialog
6/23/14 change color of game buttons to 'yellow'
6/19/14 design decision: default to game timer off in all sims
6/19/14 replace Check-Mark-u2713.png and Heavy-Ballot-X-u2718.png with ShadowText
6/19/14 #41 create icon for 'Introduction' screen programmatically
6/19/14 #41 create icon for 'Game' screen programmatically
6/19/14 EquationTerm: change unused constructor parameter (actualCoefficient) to an option
6/19/14 Equation: replace overriding of getName with options.name
6/19/14 #36 add credits for About dialog
6/19/14 #33 disable the 'Check' button in the game when all coefficients are zero
6/17/14 #42 add missing entries in images/license.txt
6/17/14 #22 remove unused strings from balancing-chemical-equations_en.strings
# 1.0.0-dev.2 6/16/14
6/16/14 #17 use default "Start Over" for button label on scoreboard
# 1.0.0-dev.1 6/16/14
6/3/14 #13 stroke atoms
3/20/14 port images and strings from Java SVN repository
3/20/14 create basic directory structure and top-level files
3/20/14 created GitHub repository